--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   <link rel="icon" type="image/x-icon" href="./assets/icon.png">
   <meta name="author" content="Flavia Sigoli"/>
   <meta http-equiv="content-language" content="en-US" />
-  <meta name="copyright" content="Copyright © 2024 Gra Carpentry" />
+  <meta name="copyright" content="Copyright © 2024 Figueiredos Cleaning" />
   <meta http-equiv="content-type" content="html; charset=UTF-8" />
-  <meta name="description" content="FP Gra Carpentry Services" />
-  <meta name="keywords" content="portfolio, Business, Gra Carpentry, Gra Carpentry, Gra Carpentry, Carpentry, Carpentry Services, Services, about, OHIO, Connecticut">
+  <meta name="description" content="FP Figueiredos Cleaning Services" />
+  <meta name="keywords" content="portfolio, Business, Figueiredos Cleaning, Figueiredos Cleaning, Figueiredos Cleaning, Cleaning, Cleaning Services, Services, about, OHIO">
   <meta name="robots" content="index, follow">
 </head>
 <body>
@@ -1015,7 +1015,7 @@
           </div>
         </div>
         <div class="rights">
-            <p>© 2024 Gra Carpentry. All rights reserved.</p>
+            <p>© 2024 Figueiredos Cleaning. All rights reserved.</p>
             <ul>
                 <li><a href="#">Privacy Policy</a></li>
                 <li><a href="#">Terms of Service</a></li>
@@ -1032,7 +1032,7 @@
       {
         "@context": "http://schema.org",
         "@type": "LocalBusiness",
-        "name": "Gra Carpentry",
+        "name": "Figueiredos Cleaning",
         "image": "https://www.figueiredos.com/",
         "telephone": [
           "(614) 907-6714"
