--- a/services/residentialcleaning.html
+++ b/services/residentialcleaning.html
@@ -16,10 +16,11 @@
   <link rel="icon" type="image/x-icon" href="../assets/icon.png">
   <meta name="author" content="Flavia Sigoli"/>
   <meta http-equiv="content-language" content="en-US" />
-  <meta name="copyright" content="Copyright © 2024 Gra Carpentry" />
+  <meta name="copyright" content="Copyright © 2024 Gra Carpentry" 
+  <meta name="copyright" content="Copyright © 2024 Figueiredos Cleaning" />
   <meta http-equiv="content-type" content="html; charset=UTF-8" />
-  <meta name="description" content="FP Gra Carpentry Services" />
-  <meta name="keywords" content="portfolio, Business, Gra Carpentry, Gra Carpentry, Gra Carpentry, Carpentry, Carpentry Services, Services, about, OHIO, Connecticut">
+  <meta name="description" content="FP Figueiredos Cleaning Services" />
+  <meta name="keywords" content="portfolio, Business, Figueiredos Cleaning, Figueiredos Cleaning, Figueiredos Cleaning, Cleaning, Cleaning Services, Services, about, OHIO">
   <meta name="robots" content="index, follow">
 </head>
 <body>
