--- a/index.html
+++ b/index.html
@@ -143,7 +143,11 @@
             </div>
             <div class="posterimg">
               <!-- <video src="./assets/videoinicialgra.mp4" autoplay playsinline muted loop></video> -->
-
+               <div class="posterimginfos">
+                <h1>CLEANING <br>SPACES</h1>
+                <h2>beautifully done</h2>
+                <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
+               </div>
               <img class="posterimgbg" src="./assets/842335137e22cfc386a3c49f6f8c5ce2.gif" alt="">
             </div>
           </div>
@@ -570,7 +574,7 @@
               <swiper-container class="MySwiper2 reveal" pagination="true" pagination-clickable="true" space-between="0" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="5000">
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
-                    <img class="bgservcar" src="./assets/services1.png" alt="" draggable="false">
+                    <img class="bgservcar" src="./assets/ResidentialCleaning.webp" alt="" draggable="false">
                     <div class="cardinfos">
                       <h6>Residential <br>Cleaning</h6>
                         <button class="servicesbtn"><a href="./services/residentialcleaning.html">
@@ -581,7 +585,7 @@
                 </swiper-slide>
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
-                    <img class="bgservcar" src="./assets/services2.png" alt="" draggable="false">
+                    <img class="bgservcar" src="./assets/CommercialCleaning.webp" alt="" draggable="false">
                     <div class="cardinfos">
                       <h6>Commercial  <br>Cleaning</h6>
                         <button class="servicesbtn"><a href="./services/commercialcleaning.html">
@@ -592,7 +596,7 @@
                 </swiper-slide>
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
-                    <img class="bgservcar" src="./assets/services3.png" alt="" draggable="false">
+                    <img class="bgservcar" src="./assets/Movein&OutCleaning.webp" alt="" draggable="false">
                     <div class="cardinfos">
                       <h6>Move in & <br>Move out Cleaning</h6>
                         <button class="servicesbtn"><a href="./services/moveinoutcleaning.html">
@@ -603,7 +607,7 @@
                 </swiper-slide>
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
-                    <img class="bgservcar" src="./assets/services4.png" alt="" draggable="false">
+                    <img class="bgservcar" src="./assets/Post-ConstructionCleaning.webp" alt="" draggable="false">
                     <div class="cardinfos">
                       <h6>Post-Construction <br>Cleaning</h6>
                       <button class="servicesbtn"><a href="./services/postconstructioncleaning.html">
