--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
                           </svg>
                         </button>
                         <div class="dropdown-content">
-                          <a href="./services/residentialcleaning.html">Residential Cleaning</a>
-                          <a href="#">Commercial Cleaning</a>
-                          <a href="#">Move in & Move out Cleaning</a>
-                          <a href="#">Post-construction Cleaning</a>
-                          <a href="#">Garage Cleaning</a>
-                          <a href="#">Outdoor Cleaning</a>
+                          <a href="/services/residentialcleaning.html">Residential Cleaning</a>
+                          <a href="/services/commercialcleaning.html">Commercial Cleaning</a>
+                          <a href="/services/moveinoutcleaning.html">Move in & Move out Cleaning</a>
+                          <a href="/services/postconstructioncleaning.html">Post-construction Cleaning</a>
+                          <a href="/services/garagecleaning.html">Garage Cleaning</a>
+                          <a href="/services/outdoorlivingcleaning.html">Outdoor Cleaning</a>
                         </div>
                       </div>
                       <li><a href="#aboutus"> About us </a></li>
@@ -571,7 +571,7 @@
                 <p>At Figueiredo's Cleaning, our commitment to excellence ensures top-notch services for every space. Trust us to exceed your expectations and meet your cleaning needs with utmost care!</p>
             </div>
             <div class="servicesgrid">
-              <swiper-container class="MySwiper2 reveal" pagination="true" pagination-clickable="true" space-between="0" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="5000">
+              <swiper-container class="MySwiper2 reveal" pagination="true" pagination-clickable="true" space-between="0" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="5000" centered-slides="true">
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
                     <img class="bgservcar" src="./assets/ResidentialCleaning.webp" alt="" draggable="false">
@@ -611,6 +611,28 @@
                     <div class="cardinfos">
                       <h6>Post-Construction <br>Cleaning</h6>
                       <button class="servicesbtn"><a href="./services/postconstructioncleaning.html">
+                          See more &#8594;
+                        </a></button>
+                    </div>
+                  </div>
+                </swiper-slide>
+                <swiper-slide class="swiper2">
+                  <div class="servicescard">
+                    <img class="bgservcar" src="./assets/GarageCleaning.webp" alt="" draggable="false">
+                    <div class="cardinfos">
+                      <h6>Garage <br>Cleaning</h6>
+                      <button class="servicesbtn"><a href="./services/garagecleaning.html">
+                          See more &#8594;
+                        </a></button>
+                    </div>
+                  </div>
+                </swiper-slide>
+                <swiper-slide class="swiper2">
+                  <div class="servicescard">
+                    <img class="bgservcar" src="./assets/OutdoorLivingCleaning.webp" alt="" draggable="false">
+                    <div class="cardinfos">
+                      <h6>Outdoor Living <br>Cleaning</h6>
+                      <button class="servicesbtn"><a href="./services/outdoorlivingcleaning.html">
                           See more &#8594;
                         </a></button>
                     </div>
