--- a/services/outdoorlivingcleaning.html
+++ b/services/outdoorlivingcleaning.html
@@ -80,13 +80,13 @@
     <div class="popuptest bg-grey">
         <div class="popup">
             <div class="content">
-                  <h1>RESIDENTIAL</h1>
+                  <h1>Outdoor</h1>
                 <span>Cleaning</span>
-                <p>Your home is your sanctuary; we’re here to help keep it that way. Our detailed residential cleaning services ensure every room is spotless and comfortable, whether you need regular upkeep or a thorough, deep clean. Enjoy a sparkling home without lifting a finger.</p>
+                <p>Your outdoor areas should be just as clean and inviting as the inside of your home. Our outdoor cleaning services cover everything from patios to walkways, ensuring your entire property looks its best.</p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
-        <img src="../assets/popupimg1.png" alt="" class="popupimg">
+        <img src="../assets/popupimgoutdoor.png" alt="" class="popupimg">
         <!-- <video src="" class="popupimg"></video> -->
           <div class="firstswip container">
             <swiper-container class="mySwiper1" space-between="10" slides-per-view="auto" loop="true" autoplay-delay="0"  autoplay-delay="0" autoplay-disable-on-interaction="false" slides-per-view="auto" speed="1000" freeMode="true">
