--- a/services/commercialcleaning.html
+++ b/services/commercialcleaning.html
@@ -80,13 +80,13 @@
     <div class="popuptest bg-grey">
         <div class="popup">
             <div class="content">
-                  <h1>RESIDENTIAL</h1>
+                  <h1>COMMERCIAL</h1>
                 <span>Cleaning</span>
-                <p>Your home is your sanctuary; we’re here to help keep it that way. Our detailed residential cleaning services ensure every room is spotless and comfortable, whether you need regular upkeep or a thorough, deep clean. Enjoy a sparkling home without lifting a finger.</p>
+                <p>A clean workplace is vital to a productive environment. Our commercial cleaning services are designed to maintain a pristine and professional atmosphere, allowing your business to thrive in a spotless space.</p>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
-        <img src="../assets/popupimg1.png" alt="" class="popupimg">
+        <img src="../assets/popupimgcommercial.png" alt="" class="popupimg">
         <!-- <video src="" class="popupimg"></video> -->
           <div class="firstswip container">
             <swiper-container class="mySwiper1" space-between="10" slides-per-view="auto" loop="true" autoplay-delay="0"  autoplay-delay="0" autoplay-disable-on-interaction="false" slides-per-view="auto" speed="1000" freeMode="true">
