--- a/index.html
+++ b/index.html
@@ -564,14 +564,14 @@
           </div>
         </div>
         <div class="servicescontainer container" id="services">
-            <div class="servicestitle reveal revealtext">
+            <div class="servicestitle">
                 <h1 class="small">Our Services</h1>
                 <img class="vetor1" src="./assets/vetor1.svg" alt="">
                 <h2 class="h2">Expert Care for Every Space</h2>
                 <p>At Figueiredo's Cleaning, our commitment to excellence ensures top-notch services for every space. Trust us to exceed your expectations and meet your cleaning needs with utmost care!</p>
             </div>
             <div class="servicesgrid">
-              <swiper-container class="MySwiper2 reveal" pagination="true" pagination-clickable="true" space-between="0" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="5000" centered-slides="true">
+              <swiper-container class="MySwiper2 reveal revealtext" pagination="true" pagination-clickable="true" space-between="0" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="5000" centered-slides="true">
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
                     <img class="bgservcar" src="./assets/ResidentialCleaning.webp" alt="" draggable="false">
@@ -644,30 +644,29 @@
         </div>
         <div class="reviewscontainer container" id="reviews">
             <div class="reviewstitle reveal revealtext">
-                <h2 class="small">Reviews</h2>
+                <h2 class="small reveal revealtext">Reviews</h2>
                 <img src="./assets/vetor2.svg" alt="" class="vetor1">
-                <h3>What Our Clients Are Saying</h3> 
-                <p>We value your feedback and would love to hear about your experience with our cleaning team. Your input is crucial in our continuous efforts to improve and provide better care for your space!</p>         
+                <h3 class=" reveal revealtext">What Our Clients Are Saying</h3> 
+                 <p class=" reveal revealtext">We value your feedback and would love to hear about your experience with our cleaning team. Your input is crucial in our continuous efforts to improve and provide better care for your space!</p>         
             </div>
             <!--  REVIEWS GOOGLE -->
             <button class="servicesbutton btn1"><a href="#contact">Get a free estimate</a></button>      
         </div>
         <div class="aboutcontainer container" id="aboutus">
             <div class="about">
-              <div class="abouttitle reveal revealtext">
-                <h2 class="small">About us</h2>
+              <div class="abouttitle">
+                <h2 class="small reveal revealtext">About us</h2>
                 <img src="./assets/vetor1.svg" alt="" class="vetor1">
-                <h1>Choose Figueiredo's Cleaning to provide exceptional cleaning services.</h1>
-                <p>With three years of experience, we pride ourselves on being a licensed and insured company. Our team is dedicated to creating clean, welcoming spaces that enhance your well-being. Trust us to keep your home or business spotless so you can focus on what matters most!</p>
+                <h1 class="reveal revealtext">Choose Figueiredo's Cleaning to provide exceptional cleaning services.</h1>
+                 <p class="reveal revealtext">With three years of experience, we pride ourselves on being a licensed and insured company. Our team is dedicated to creating clean, welcoming spaces that enhance your well-being. Trust us to keep your home or business spotless so you can focus on what matters most!</p>
               </div>
               <img src="./assets/figueiredoslogo.png" alt="" class="logo">
             </div>
             <div class="aboutpref">
-              <div class="abouttext reveal revealtext">
+              <div class="abouttext">
                 <h1 class="small">Why choose us?</h1>
-                <h2>Are we sure about our services?
-                  We show you our differences!</h2>
-                  <p>Experience spotless excellence with our exceptional cleaning team. We're committed to delivering unparalleled service and focusing on excellence in every task.</p>
+                <h2 class="reveal revealtext">Are we sure about our services? We show you our differences!</h2>
+                 <p class="reveal revealtext">Experience spotless excellence with our exceptional cleaning team. We're committed to delivering unparalleled service and focusing on excellence in every task.</p>
               </div>
                   <div class="preferencegrid">
                       <div class="preferencecard reveal">
@@ -801,13 +800,13 @@
             </div>
                   <button class="servicesbutton btn1"><a href="#contact">Get a free estimate</a></button>      
         </div>
-        <div class="imgvw container"><img src="./assets/imgvw.png" alt="" class="imgvwbg"></div>
+        <div class="imgvw container reveal revealtext"><img src="./assets/imgvw.png" alt="" class="imgvwbg"></div>
         <div class="gallerycontainer container" id="portfolio">
-            <div class="gallerytitle reveal revealtext">
-                <h2 class="small">Portfolio</h2>
+            <div class="gallerytitle">
+                <h2 class="small reveal revealtext">Portfolio</h2>
                 <img src="./assets/vetor3.svg" alt="" class="vetor1">
-                <h3>Cleaning Spaces, Beautifully Done.</h3>
-                <p>At Figueiredo's Cleaning, our commitment to excellence ensures top-notch services for every space. Trust us to exceed your expectations and meet your cleaning needs with utmost care!</p>
+                <h3 class=" reveal revealtext">Cleaning Spaces, Beautifully Done.</h3>
+                 <p class=" reveal revealtext">At Figueiredo's Cleaning, our commitment to excellence ensures top-notch services for every space. Trust us to exceed your expectations and meet your cleaning needs with utmost care!</p>
             </div>
             <div class="gallerygrid">
               <swiper-container class="mySwiper3 reveal" pagination="true" pagination-clickable="true" pagination-dynamic-bullets="true" space-between="10" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="4000" centered-slides="true">
