--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         <div id="home">
             <nav class="navbar" id="homenav">
               <img src="./assets/logo-f.png" alt="" class="logow"draggable="false">
-              <div class="callnow callm"><a href="tel:+16149076714">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M15.0499 5C16.0267 5.19057 16.9243 5.66826 17.628 6.37194C18.3317 7.07561 18.8094 7.97326 18.9999 8.95M15.0499 1C17.0792 1.22544 18.9715 2.13417 20.4162 3.57701C21.8608 5.01984 22.7719 6.91101 22.9999 8.94M21.9999 16.92V19.92C22.0011 20.1985 21.944 20.4742 21.8324 20.7293C21.7209 20.9845 21.5572 21.2136 21.352 21.4019C21.1468 21.5901 20.9045 21.7335 20.6407 21.8227C20.3769 21.9119 20.0973 21.9451 19.8199 21.92C16.7428 21.5856 13.7869 20.5341 11.1899 18.85C8.77376 17.3147 6.72527 15.2662 5.18993 12.85C3.49991 10.2412 2.44818 7.27099 2.11993 4.18C2.09494 3.90347 2.12781 3.62476 2.21643 3.36162C2.30506 3.09849 2.4475 2.85669 2.6347 2.65162C2.82189 2.44655 3.04974 2.28271 3.30372 2.17052C3.55771 2.05833 3.83227 2.00026 4.10993 2H7.10993C7.59524 1.99522 8.06572 2.16708 8.43369 2.48353C8.80166 2.79999 9.04201 3.23945 9.10993 3.72C9.23656 4.68007 9.47138 5.62273 9.80993 6.53C9.94448 6.88792 9.9736 7.27691 9.89384 7.65088C9.81408 8.02485 9.6288 8.36811 9.35993 8.64L8.08993 9.91C9.51349 12.4135 11.5864 14.4864 14.0899 15.91L15.3599 14.64C15.6318 14.3711 15.9751 14.1858 16.3491 14.1061C16.723 14.0263 17.112 14.0555 17.4699 14.19C18.3772 14.5286 19.3199 14.7634 20.2799 14.89C20.7657 14.9585 21.2093 15.2032 21.5265 15.5775C21.8436 15.9518 22.0121 16.4296 21.9999 16.92Z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>                        
-                Call now <br>(614) 907-6714</a>
+              <div class="callnow callm">
+                <a class="btn1" href="tel:+13802824104">
+                  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M15.0499 5C16.0267 5.19057 16.9243 5.66826 17.628 6.37194C18.3317 7.07561 18.8094 7.97326 18.9999 8.95M15.0499 1C17.0792 1.22544 18.9715 2.13417 20.4162 3.57701C21.8608 5.01984 22.7719 6.91101 22.9999 8.94M21.9999 16.92V19.92C22.0011 20.1985 21.944 20.4742 21.8324 20.7293C21.7209 20.9845 21.5572 21.2136 21.352 21.4019C21.1468 21.5901 20.9045 21.7335 20.6407 21.8227C20.3769 21.9119 20.0973 21.9451 19.8199 21.92C16.7428 21.5856 13.7869 20.5341 11.1899 18.85C8.77376 17.3147 6.72527 15.2662 5.18993 12.85C3.49991 10.2412 2.44818 7.27099 2.11993 4.18C2.09494 3.90347 2.12781 3.62476 2.21643 3.36162C2.30506 3.09849 2.4475 2.85669 2.6347 2.65162C2.82189 2.44655 3.04974 2.28271 3.30372 2.17052C3.55771 2.05833 3.83227 2.00026 4.10993 2H7.10993C7.59524 1.99522 8.06572 2.16708 8.43369 2.48353C8.80166 2.79999 9.04201 3.23945 9.10993 3.72C9.23656 4.68007 9.47138 5.62273 9.80993 6.53C9.94448 6.88792 9.9736 7.27691 9.89384 7.65088C9.81408 8.02485 9.6288 8.36811 9.35993 8.64L8.08993 9.91C9.51349 12.4135 11.5864 14.4864 14.0899 15.91L15.3599 14.64C15.6318 14.3711 15.9751 14.1858 16.3491 14.1061C16.723 14.0263 17.112 14.0555 17.4699 14.19C18.3772 14.5286 19.3199 14.7634 20.2799 14.89C20.7657 14.9585 21.2093 15.2032 21.5265 15.5775C21.8436 15.9518 22.0121 16.4296 21.9999 16.92Z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                  </svg>                        
+                  Call now <br>(380) 282-4104</a>
               </div>   
               <div class="btn-toggle menu_icon_box">
                   <div class="line1"></div>
@@ -63,11 +64,12 @@
                       <li><a href="#aboutus"> About us </a></li>
                       <li><a href="#portfolio"> Portfolio </a></li>
                       <li><a href="#reviews"> Reviews </a></li>
-                      <li class="callnow callw"><a class=" btn1" href="tel:+16149076714">
+                      <li class="callnow callw">
+                        <a class="btn1" href="tel:+13802824104">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M15.0499 5C16.0267 5.19057 16.9243 5.66826 17.628 6.37194C18.3317 7.07561 18.8094 7.97326 18.9999 8.95M15.0499 1C17.0792 1.22544 18.9715 2.13417 20.4162 3.57701C21.8608 5.01984 22.7719 6.91101 22.9999 8.94M21.9999 16.92V19.92C22.0011 20.1985 21.944 20.4742 21.8324 20.7293C21.7209 20.9845 21.5572 21.2136 21.352 21.4019C21.1468 21.5901 20.9045 21.7335 20.6407 21.8227C20.3769 21.9119 20.0973 21.9451 19.8199 21.92C16.7428 21.5856 13.7869 20.5341 11.1899 18.85C8.77376 17.3147 6.72527 15.2662 5.18993 12.85C3.49991 10.2412 2.44818 7.27099 2.11993 4.18C2.09494 3.90347 2.12781 3.62476 2.21643 3.36162C2.30506 3.09849 2.4475 2.85669 2.6347 2.65162C2.82189 2.44655 3.04974 2.28271 3.30372 2.17052C3.55771 2.05833 3.83227 2.00026 4.10993 2H7.10993C7.59524 1.99522 8.06572 2.16708 8.43369 2.48353C8.80166 2.79999 9.04201 3.23945 9.10993 3.72C9.23656 4.68007 9.47138 5.62273 9.80993 6.53C9.94448 6.88792 9.9736 7.27691 9.89384 7.65088C9.81408 8.02485 9.6288 8.36811 9.35993 8.64L8.08993 9.91C9.51349 12.4135 11.5864 14.4864 14.0899 15.91L15.3599 14.64C15.6318 14.3711 15.9751 14.1858 16.3491 14.1061C16.723 14.0263 17.112 14.0555 17.4699 14.19C18.3772 14.5286 19.3199 14.7634 20.2799 14.89C20.7657 14.9585 21.2093 15.2032 21.5265 15.5775C21.8436 15.9518 22.0121 16.4296 21.9999 16.92Z" stroke="#000" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                         </svg>                        
-                        Call now <br>(614) 907-6714</a>
+                        Call now <br>(380) 282-4104</a>
                       </li>   
                     </ul>
                   </div>
@@ -101,7 +103,7 @@
             <div class="posterinfos infosw">
               <img src="./assets/logo-f.png" alt="">
               <ul>
-                <li><a href="https://www.instagram.com/ " target="_blank">
+                <li><a href="https://www.instagram.com/figueiredoscleaning/" target="_blank">
                   <svg width="34" height="33" viewBox="0 0 34 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="16.9004" cy="16.5" r="16.5" fill="url(#paint0_linear_20056_2920)"/>
                     <path fill-rule="evenodd" clip-rule="evenodd" d="M20.8694 7.18347H12.3836C9.45457 7.18347 7.08008 9.55797 7.08008 12.487V20.9728C7.08008 23.9018 9.45457 26.2763 12.3836 26.2763H20.8694C23.7984 26.2763 26.1729 23.9018 26.1729 20.9728V12.487C26.1729 9.55797 23.7984 7.18347 20.8694 7.18347ZM24.3167 20.9728C24.3108 22.8742 22.7708 24.4142 20.8694 24.4201H12.3836C10.4822 24.4142 8.94215 22.8742 8.93633 20.9728V12.487C8.94215 10.5856 10.4822 9.04554 12.3836 9.03972H20.8694C22.7708 9.04554 24.3108 10.5856 24.3167 12.487V20.9728ZM21.6649 12.7522C22.2507 12.7522 22.7256 12.2773 22.7256 11.6915C22.7256 11.1057 22.2507 10.6308 21.6649 10.6308C21.0791 10.6308 20.6042 11.1057 20.6042 11.6915C20.6042 12.2773 21.0791 12.7522 21.6649 12.7522ZM16.6265 11.9567C13.9903 11.9567 11.8533 14.0937 11.8533 16.7299C11.8533 19.3661 13.9903 21.5031 16.6265 21.5031C19.2627 21.5031 21.3997 19.3661 21.3997 16.7299C21.4026 15.4631 20.9005 14.2474 20.0048 13.3516C19.109 12.4558 17.8933 11.9539 16.6265 11.9567ZM13.7095 16.7299C13.7095 18.3409 15.0155 19.6469 16.6265 19.6469C18.2375 19.6469 19.5435 18.3409 19.5435 16.7299C19.5435 15.1189 18.2375 13.8129 16.6265 13.8129C15.0155 13.8129 13.7095 15.1189 13.7095 16.7299Z" fill="black"/>
@@ -114,7 +116,7 @@
                     </defs>
                     </svg>                    
                 </a></li>            
-                <li><a href="https://www.facebook.com/" target="_blank">
+                <li><a href="https://www.facebook.com/profile.php?id=61566283558712&is_tour_dismissed" target="_blank">
                   <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <circle cx="16.5" cy="16.5" r="16.5" fill="url(#paint0_linear_20056_2923)"/>
                     <path d="M27.1088 16.8221C27.1088 10.9282 22.3599 6.15016 16.5017 6.15016C10.6435 6.15016 5.89453 10.9282 5.89453 16.8221C5.89453 22.1487 9.77339 26.5638 14.8443 27.3644V19.907H12.1511V16.8221H14.8443V14.471C14.8443 11.7963 16.428 10.3189 18.8507 10.3189C20.0114 10.3189 21.2251 10.5273 21.2251 10.5273V13.1536H19.8877C18.5701 13.1536 18.159 13.9763 18.159 14.8203V16.8221H21.1008L20.6306 19.907H18.159V27.3644C23.23 26.5638 27.1088 22.1489 27.1088 16.8221Z" fill="black"/>
@@ -142,13 +144,13 @@
               </ul>
             </div>
             <div class="posterimg">
-              <!-- <video src="./assets/videoinicialgra.mp4" autoplay playsinline muted loop></video> -->
+              <video class="posterimgbg" src="./assets/Video.mp4" autoplay playsinline muted loop></video>
+              <div class="overlay"></div>
                <div class="posterimginfos">
                 <h1>CLEANING <br>SPACES</h1>
                 <h2>beautifully done</h2>
                 <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
                </div>
-              <img class="posterimgbg" src="./assets/842335137e22cfc386a3c49f6f8c5ce2.gif" alt="">
             </div>
           </div>
           <div class="firstswip container">
@@ -849,7 +851,7 @@
             </svg> Follow us
             </h2>
             <div class="ig-iframe reveal revealtext">
-            <iframe src="https://www.instagram.com/meta/embed" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
+              <iframe src="https://www.instagram.com/figueiredoscleaning/embed" frameborder="0" scrolling="no" allowtransparency="true"></iframe>
             </div>
         </div>
         <div class="formgrid">
@@ -951,7 +953,7 @@
                         </linearGradient>
                       </defs>
                     </svg> Phone</h2>
-                    <p>(614) 907-6714</p>
+                    <p>(380) 282-4104</p>
                     <svg xmlns="http://www.w3.org/2000/svg" width="62" height="5" viewBox="0 0 62 5" fill="none">
                       <path d="M0 2.5C0 1.39543 0.895431 0.5 2 0.5H60C61.1046 0.5 62 1.39543 62 2.5C62 3.60457 61.1046 4.5 60 4.5H2C0.895432 4.5 0 3.60457 0 2.5Z" fill="url(#paint0_linear_18001_537)"/>
                       <defs>
@@ -1027,11 +1029,11 @@
                   <h3>Follow us</h3>
                     <ul>
                         <li>
-                          <a href="https://www.facebook.com/"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
+                          <a href="https://www.facebook.com/profile.php?id=61566283558712&is_tour_dismissed"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="24" viewBox="0 0 25 24" fill="none">
                           <path d="M22.6665 12.3033C22.6665 6.7467 18.1894 2.24219 12.6665 2.24219C7.14365 2.24219 2.6665 6.7467 2.6665 12.3033C2.6665 17.325 6.32334 21.4874 11.104 22.2422V15.2116H8.56494V12.3033H11.104V10.0867C11.104 7.56515 12.597 6.17231 14.8811 6.17231C15.9753 6.17231 17.1196 6.36882 17.1196 6.36882V8.8448H15.8587C14.6165 8.8448 14.229 9.62041 14.229 10.4161V12.3033H17.0024L16.5591 15.2116H14.229V22.2422C19.0097 21.4874 22.6665 17.3252 22.6665 12.3033Z" fill="#EEEEF0"/>
                         </svg> Facebook</a></li>
                         <li>
-                          <a href="https://www.instagram.com/figueiredos/ " target="_blank"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <a href="https://www.instagram.com/figueiredoscleaning/" target="_blank"><svg width="25" height="24" viewBox="0 0 25 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path fill-rule="evenodd" clip-rule="evenodd" d="M16.6665 3.24219H8.6665C5.90508 3.24219 3.6665 5.48077 3.6665 8.24219V16.2422C3.6665 19.0036 5.90508 21.2422 8.6665 21.2422H16.6665C19.4279 21.2422 21.6665 19.0036 21.6665 16.2422V8.24219C21.6665 5.48077 19.4279 3.24219 16.6665 3.24219ZM19.9165 16.2422C19.911 18.0348 18.4591 19.4867 16.6665 19.4922H8.6665C6.87385 19.4867 5.42199 18.0348 5.4165 16.2422V8.24219C5.42199 6.44954 6.87385 4.99768 8.6665 4.99219H16.6665C18.4591 4.99768 19.911 6.44954 19.9165 8.24219V16.2422ZM17.4165 8.49219C17.9688 8.49219 18.4165 8.04447 18.4165 7.49219C18.4165 6.93991 17.9688 6.49219 17.4165 6.49219C16.8642 6.49219 16.4165 6.93991 16.4165 7.49219C16.4165 8.04447 16.8642 8.49219 17.4165 8.49219ZM12.6665 7.74219C10.1812 7.74219 8.1665 9.75691 8.1665 12.2422C8.1665 14.7275 10.1812 16.7422 12.6665 16.7422C15.1518 16.7422 17.1665 14.7275 17.1665 12.2422C17.1692 11.0479 16.6959 9.90176 15.8514 9.05727C15.0069 8.21278 13.8608 7.73953 12.6665 7.74219ZM9.9165 12.2422C9.9165 13.761 11.1477 14.9922 12.6665 14.9922C14.1853 14.9922 15.4165 13.761 15.4165 12.2422C15.4165 10.7234 14.1853 9.49219 12.6665 9.49219C11.1477 9.49219 9.9165 10.7234 9.9165 12.2422Z" fill="#EEEEF0"/>
                           </svg>
                           Instagram</a></li>
@@ -1060,7 +1062,7 @@
         "name": "Figueiredos Cleaning",
         "image": "https://www.figueiredos.com/",
         "telephone": [
-          "(614) 907-6714"
+          "(380) 282-4104"
         ],
         "email": "contact@figueiredoscleaning.com",
         "address": {
