--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                <div class="posterimginfos">
                 <h1>CLEANING <br>SPACES</h1>
                 <h2>beautifully done</h2>
-                <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
+                <button class="servicesbutton btn1 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
                </div>
             </div>
           </div>
@@ -573,7 +573,7 @@
                 <p>At Figueiredo's Cleaning, our commitment to excellence ensures top-notch services for every space. Trust us to exceed your expectations and meet your cleaning needs with utmost care!</p>
             </div>
             <div class="servicesgrid">
-              <swiper-container class="MySwiper2 reveal revealtext" pagination="true" pagination-clickable="true" space-between="0" slides-per-view="auto" loop="true" navigation="true" autoplay-delay="5000" centered-slides="true">
+              <swiper-container class="MySwiper2 reveal revealtext" pagination="true" pagination-clickable="true" slides-per-view="auto" autoplay-delay="3000"               centered-slides="true" space-between="0" loop="true">
                 <swiper-slide class="swiper2">
                   <div class="servicescard">
                     <img class="bgservcar" src="./assets/ResidentialCleaning.webp" alt="" draggable="false">
@@ -641,7 +641,7 @@
                   </div>
                 </swiper-slide>
               </swiper-container> 
-                <button class="servicesbutton btn2 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
+                <button class="servicesbutton btn1 servibtn" id="posterbtn"><a href="#contact">Get a free estimate</a></button>
             </div>
         </div>
         <div class="reviewscontainer container" id="reviews">
